@@ -1,3 +1,10 @@
+2011-05-09  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclNamesp.c (NamespacePathCmd): Convert to use Tcl_Obj API
+	* generic/tclPkg.c (Tcl_PackageObjCmd):   for result generation in
+	* generic/tclTimer.c (Tcl_AfterObjCmd):   [after info], [namespace
+	path] and [package versions].
+
 2011-05-09  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclListObj.c:	Revise empty string tests so that we avoid
